Table of contents dynamically working now

--- a/src/json/knowledge-items.json
+++ b/src/json/knowledge-items.json
@@ -4,5 +4,11 @@
 		"title": "Welcome to the Knowledge Center",
 		"subTitle": "All things related to the world of the Third Horizon",
 		"content": "To start select a section on the left for more information on a topic."
-	}
+	},
+	{
+		"dataId": 1,
+		"title": "Coriolis Station",
+		"subTitle": "All things related to Coriolis Staion",
+		"content": "Blah Blah Blah"
+	}	
 ]
