--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "coriolis-companion",
   "version": "0.1.0",
+  "homepage": "https://jacarder.github.io/Coriolis_Companion",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.4.1",
@@ -26,6 +27,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -45,6 +48,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.7.5",
     "@types/react-router-dom": "^5.3.0",
+    "gh-pages": "^3.2.3",
     "sass": "^1.42.0"
   }
 }
