Changed homepage location

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coriolis-companion",
   "version": "0.1.0",
-  "homepage": "https://jacarder.github.io/Coriolis_Companion",
+  "homepage": "https://coriolis-companion.vercel.app/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.4.1",
