--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.7.5",
     "@types/react-router-dom": "^5.3.0",
+    "openai": "^3.0.0",
     "sass": "^1.42.0"
   }
 }
