--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "zustand": "^4.1.1"
   },
   "scripts": {
     "predeploy": "npm run build",
