--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^17.0.0",
     "firebase": "8.10.0",
     "leaflet": "^1.7.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.1",
@@ -48,6 +49,7 @@
   ],
   "devDependencies": {
     "@types/leaflet": "^1.7.5",
+    "@types/lodash": "^4.14.185",
     "@types/react-router-dom": "^5.3.0",
     "openai": "^3.0.0",
     "sass": "^1.42.0"
