--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.68",
     "@mui/material": "^5.0.0-rc.1",
+    "@supabase/supabase-js": "^2.2.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -16,7 +17,6 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "firebase": "8.10.0",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
@@ -52,6 +52,7 @@
     "@types/lodash": "^4.14.185",
     "@types/react-router-dom": "^5.3.0",
     "openai": "^3.0.0",
-    "sass": "^1.42.0"
+    "sass": "^1.42.0",
+    "supabase": "^1.28.4"
   }
 }
